# architecture-pro-insuretech

./: .gitignore  README.md  project-template.md  pyproject.toml
Task1/: ADR-0001-architecture-decisions.md  inuretech-tech-arch-to-be.puml
Task2/: Makefile  README.md
Task2/evidence/: hpa-memory-evidence.md  hpa-rps-evidence.md  prometheus-evidence.md
Task2/logs/: hpa-memory-scaling.md  locust-memory_stats.csv  locust-memory_stats_history.csv  locust-rps_stats.csv  locust-rps_stats_history.csv  prometheus-http_requests_total.json  prometheus-targets.json
Task2/manifests/: deployment.yaml  hpa-memory.yaml  hpa-rps.yaml  ingress.yaml  network-policy.yaml  pdb.yaml  prometheus-adapter-values.yaml  service.yaml  servicemonitor.yaml
Task2/reports/: metrics-report.md
Task2/scripts/: collect_metrics_report.py  locustfile.py
Task3/: insuretech-container-to-be.puml  risks.md
Task4/: ADR-0002-osago-architecture-decisions.md  insuretech-osago-to-be.puml
Task5/: client-info.schema.graphql
Task6/: nginx.conf  trace-matrix.md
styles/: yandex_c4_style.puml
