[project]
name = "architecture-pro-insuretech"
version = "0.1.0"
description = "InsureTech architecture project for insurance aggregation services, serving both private and corporate clients with life insurance products and API integrations"
readme = "README.md"
requires-python = ">=3.13, <3.14"

[tool.ruff]
line-length = 100
target-version = "py313"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",    # Type annotations
    "D",      # Docstrings
    "COM",    # Trailing commas
    "ISC",    # Implicit string concatenation
    "CPY",    # Copyright headers
    "PT",     # Pytest
    "DJ",     # Django
    "NPY",    # Numpy
    "PD",     # Pandas
    "ERA",    # Commented out code
    "FIX",    # Fixme
    "TD",     # Todo
    "TRY003", # Long exception messages
    "EM101",  # Exception string literals
    "FBT",    # Boolean positional args
    "PLW0603", # Global statement
    "PLC0415", # Import not at top level (needed for multiprocessing)
]

[tool.ruff.lint.per-file-ignores]
"src/data_gen/*.py" = ["T201", "INP001"] 

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-missing-attribute = "error"
possibly-missing-import = "error"

[dependency-groups]
dev = [
    "cairosvg>=2.8.2",
    "locust>=2.43.1",
    "pillow>=12.1.0",
    "reportlab>=4.4.9",
    "ruff>=0.14.14",
    "svglib>=1.6.0",
    "ty>=0.0.14",
]
